Added all exercises

--- a/demos/debugging/runthrough/Makefile
+++ b/demos/debugging/runthrough/Makefile
@@ -6,14 +6,14 @@ COMMONDIR=../../../heat/common
 
 ifeq ($(COMP),cray)
 CC=cc
-CCFLAGS=-O3 -I/appl/opt/libpng/include -I$(COMMONDIR)
+CCFLAGS=-g -I/appl/opt/libpng/include -I$(COMMONDIR)
 LDFLAGS=-L/appl/opt/libpng/lib
 LIBS=-lpng -lz
 endif
 
 ifeq ($(COMP),gnu)
 CC=gcc
-CCFLAGS=-O3 -Wall -I$(COMMONDIR)
+CCFLAGS=-Og -Wall -I$(COMMONDIR)
 LDFLAGS=
 LIBS=-lpng
 endif
